<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stroop</string>
    <string name="start">Start</string>
    <string name="action_settings">Settings</string>
    <string name="email_file">Email</string>

    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string name="red_hex">#d10000</string>
    <string name="yellow_hex">#ffda21</string>
    <string name="green_hex">#33dd00</string>
    <string name="blue_hex">#1133cc</string>

    <string name="trialCount">count</string>
    <string name="participant">participant</string>

</resources>
